modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/enum_name_shadows_builtin_type.gd
enum Vector2 { A, B }

func test():
	pass
